# qq-banner

./: .gitignore  Cargo.toml  Dockerfile  README.md  Toasty.toml  namelist.sqlite
.github/workflows/: PushDockerBuilder.yml  TagDockerBuilder.yml
src/: error.rs  extracter.rs  globals.rs  handler.rs  lib.rs  main.rs  middleware.rs  model.rs  service.rs
src/handler/: api.rs  metrics.rs  mod.rs  permission.rs  webui.rs
template/: README.md
template/qq-banner/: package.json  pnpm-lock.yaml
template/qq-banner/src/: App.vue
template/qq-banner/src/services/: auth.ts
template/qq-banner/src/views/: ManagerList.vue
template/src/: App.vue  main.ts  router.ts
template/src/services/: auth.ts
template/src/views/: BannedList.vue  HomeView.vue  LoginView.vue  ManagerList.vue  MetricsView.vue  NotFoundView.vue  PermissionDeniedView.vue
toasty/: history.toml
toasty/migrations/: 0000_migration.sql  0001_migration.sql  0002_migration.sql  0003_migration.sql
toasty/snapshots/: 0000_snapshot.toml  0001_snapshot.toml  0002_snapshot.toml  0003_snapshot.toml
